test/files/neg/t5606.check
t5606.scala:5: error: using `?` as a type name requires backticks. [quickfixable]
case class CaseTest_?[?](someData: String)
                      ^
t5606.scala:23: error: using `?` as a type name requires backticks. [quickfixable]
  def regress_?[F[?]]   = 2
                  ^
t5606.scala:3: error: Top-level wildcard is not allowed
Scala 3 migration messages are errors under -Xsource:3. Use -Wconf / @nowarn to filter them or add -Xmigration to demote them to warnings.
Applicable -Wconf / @nowarn filters for this fatal warning: msg=<part of the message>, cat=scala3-migration
case class CaseTest[_](someData: String)
                    ^
t5606.scala:8: error: Top-level wildcard is not allowed
Scala 3 migration messages are errors under -Xsource:3. Use -Wconf / @nowarn to filter them or add -Xmigration to demote them to warnings.
Applicable -Wconf / @nowarn filters for this fatal warning: msg=<part of the message>, cat=scala3-migration
case class CaseTest2[_, _](someData: String)
                     ^
t5606.scala:8: error: Top-level wildcard is not allowed
Scala 3 migration messages are errors under -Xsource:3. Use -Wconf / @nowarn to filter them or add -Xmigration to demote them to warnings.
Applicable -Wconf / @nowarn filters for this fatal warning: msg=<part of the message>, cat=scala3-migration
case class CaseTest2[_, _](someData: String)
                        ^
t5606.scala:11: error: Top-level wildcard is not allowed
Scala 3 migration messages are errors under -Xsource:3. Use -Wconf / @nowarn to filter them or add -Xmigration to demote them to warnings.
Applicable -Wconf / @nowarn filters for this fatal warning: msg=<part of the message>, cat=scala3-migration
  def f[_](x: Int) = ???
        ^
6 errors
